--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 60vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
